syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "UserPreferenceProto";
option objc_class_prefix = "ETP";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "routines.proto";
import "relay.proto";
// flat-ent: Application preferences for a given userLogin.
message UserPreferenceData {
    option (routines.entity_type) = "UserPreference";
    option (routines.keys).keys = "user_login_id, user_pref_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = false;
    // keys: userLoginId, userPrefTypeId
    string user_login_id = 1 [(routines.opts).field_type = "id-vlong"];
    string user_pref_type_id = 2 [(routines.opts).field_type = "id-long"];
    string user_pref_group_type_id = 3 [(routines.opts).field_type = "id-long"];
    string user_pref_value = 4 [(routines.opts).field_type = "value"];
    string user_pref_data_type = 5 [(routines.opts).field_type = "id-long"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    string id = 8 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
     

    // extra
    google.protobuf.Struct extra = 11;
    map<string, google.protobuf.Any> attachments = 12 ;
}

message UserPreferenceKey{
    string user_login_id = 1 [(routines.opts).field_type = "id-vlong"];
    string user_pref_type_id = 2 [(routines.opts).field_type = "id-long"];
}

message UserPreferenceList{
    repeated UserPreferenceData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListUserPreferences` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}
